<resources>
    <string name="app_name">挖煤不不买票</string>
    <string name="text_close">关闭</string>
    <string name="text_copy_to_clipboard">复制到剪贴板</string>
    <string name="text_enter">进入</string>
    <string name="text_search">搜索</string>
    <string name="text_splash_enter">芜湖,起飞</string>
    <string name="text_network_available">有网了,起飞成功</string>
    <string name="text_network_lost">网丢了,起飞失败</string>
    <string name="text_repress_to_exit">再按,再按就爆炸</string>
    <string name="text_istop">置顶</string>
    <string name="text_new">新</string>
    <string name="text_collect">收藏</string>
    <string name="text_share">分享</string>
    <string name="text_refresh">刷新</string>
    <string name="text_share_to">分享到</string>
    <string name="text_open_browser">用浏览器打开</string>
    <string name="text_login">登了个录</string>
    <string name="text_register">注了个册</string>
    <string name="text_hot_search">热门搜索</string>
    <string name="text_search_history">搜索记录</string>
    <string name="text_hint">提示</string>
    <string name="text_sure">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_search_result">搜索结果</string>
    <string name="text_low">低</string>
    <string name="text_medium">中</string>
    <string name="text_hight">高</string>
    <string name="text_very_high">最高</string>
    <string name="text_please_wait">请稍后...</string>
    <string name="text_loading_dialog_default">请求中,请稍后...</string>
    <string name="text_log_out_failed">登出失败</string>
    <string name="hint_login_please">要登了个录ヽ(=^･ω･^=)丿</string>
    <string name="hint_user_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="hint_confirm_password">确认密码</string>
    <string name="hint_input_user_name">用户名呐?</string>
    <string name="hint_input_password">密码呐?</string>
    <string name="hint_input_confirm_password">俩密码咋不一样呢?</string>
    <string name="hint_login_loading">登录呢,等会~~~</string>
    <string name="hint_login_success">登录了,起飞</string>
    <string name="hint_register_loading">注册呢,等会~~~</string>
    <string name="hint_register_success">注册完了,芜湖</string>
    <string name="hint_collect_success">收藏成功</string>
    <string name="hint_uncollect_success">取消收藏成功</string>
    <string name="hint_search">要搜啥?</string>
    <string name="hint_search_delete_all_history">要清空所有搜索记录吗?</string>
    <string name="crash_desc">崩溃啦~~~</string>
    <string name="crash_error_detail">错误详情</string>
    <string name="crash_error_detail_copyed">错误信息已经复制到剪贴板</string>
    <string name="crash_close_app">退出应用</string>
    <string name="crash_restart_app">重启应用</string>
    <string name="menu_main_home">首页</string>
    <string name="menu_main_project">项目</string>
    <string name="menu_main_square">广场</string>
    <string name="menu_main_official">公众号</string>
    <string name="menu_main_me">我的</string>
    <string name="menu_square_add">分享文章</string>
    <string name="menu_ariticle">文章</string>
    <string name="menu_others">其他</string>
    <string name="loading_callback_error">竟然出错了~~~</string>
    <string name="loading_callback_retry">戳一下重试</string>
    <string name="loading_callback_empty">竟然没数据~~~</string>
    <string name="button_login">登了个录</string>
    <string name="button_register">注了个册</string>
    <string name="button_clear_all">清空</string>
    <string name="button_cancel">取消</string>
    <string name="button_share">分享</string>
    <string name="button_submit">提交</string>
    <string name="button_edit">编辑</string>
    <string name="button_delete">删除</string>
    <string name="button_done">完成</string>
    <string name="user_detail_def_conin">多少分:--</string>
    <string name="user_detail_def_rank">排第几:--</string>
    <string name="user_detail_no_user">木有这个人啊~~~</string>
    <string name="user_detail_conin">多少分:%d</string>
    <string name="user_detail_rank">排第几:%s</string>
    <string name="project_new">最新项目</string>
    <string name="square_square">广场</string>
    <string name="square_ask_every_day">每日一问</string>
    <string name="square_system">体系</string>
    <string name="square_navigation">导航</string>
    <string name="share_title">分享文章</string>
    <string name="share_ariticle_title">分享标题</string>
    <string name="share_aritile_link">分享链接</string>
    <string name="share_aritile_rule">1. 只要是任何好文都可以分享哈，并不一定要是原创！投递的文章会进入广场 tab;\n
2. CSDN，掘金，简书等官方博客站点会直接通过，不需要审核;\n
3. 其他个人站点会进入审核阶段，不要投递任何无效链接，测试的请尽快删除，否则可能会对你的账号产生一定影响;\n
4. 目前处于测试阶段，如果你发现500等错误，可以向我提交日志，让我们一起使网站变得更好。\n
5. 由于本站只有我一个人开发与维护，会尽力保证24小时内审核，当然有可能哪天太累，会延期，请保持佛系...\n"</string>
    <string name="share_ariticle_title_error">请输入最长%d字的标题</string>
    <string name="share_ariticle_url_error">请输入最长%d字的链接</string>
    <string name="share_ariticle_hint">确定要分享吗?</string>
    <string name="share_ariticle_requesting_tip">分享呢,等会~~~</string>
    <string name="share_ariticle_success">分享成功~~~</string>
    <string name="me_menu_current_coin">当前积分:</string>
    <string name="me_menu_coin">我的积分</string>
    <string name="me_menu_collection">我的收藏</string>
    <string name="me_menu_ariticle">我的文章</string>
    <string name="me_menu_todo">TODO</string>
    <string name="me_menu_site">开放API网站</string>
    <string name="me_menu_settings">设置</string>
    <string name="me_id_rank">id:%d  排名:%d</string>
    <string name="me_login_please">快来登录吧~~~</string>
    <string name="user_coin_my_coin">积分:</string>
    <string name="user_coin_my_rank">排名:</string>
    <string name="user_coin_title">积分排行</string>
    <string name="user_coin_menu_rule">积分规则</string>
    <string name="user_coin_menu_history">积分历史</string>
    <string name="user_coin_rule">积分规则</string>
    <string name="user_coin_rule_url">https://www.wanandroid.com/blog/show/2653</string>
    <string name="user_coin_history_title">积分历史</string>
    <string name="collect_title_ariticle">文章</string>
    <string name="collect_title_url">网址</string>
    <string name="collect_anonymous">匿名用户</string>
    <string name="my_share_title">我的分享</string>
    <string name="my_share_delete_message">是否删除此文章</string>
    <string name="todo_title">TODO</string>
    <string name="todo_add_title">新增TODO</string>
    <string name="todo_edit_title">编辑TODO</string>
    <string name="todo_edit_todo_title">标题</string>
    <string name="todo_edit_todo_content">内容</string>
    <string name="todo_edit_todo_date">预定完成日期</string>
    <string name="todo_edit_todo_priority">优先级</string>
    <string name="todo_edit_select_priority">选择优先级</string>
    <string name="todo_edit_error_title">请输入标题</string>
    <string name="todo_delete_message">确定要删除这条TODO吗?</string>
    <string name="open_api_site_url">https://www.wanandroid.com/</string>
    <string name="open_api_site_title">玩Android</string>
    <string name="settings_title">设置</string>
    <string name="settings_category_base">基本设置</string>
    <string name="settings_category_about">关于</string>
    <string name="settings_title_home_show_top">首页置顶文章</string>
    <string name="settings_summary_home_show_top">开启后首页会显示置顶文章</string>
    <string name="settings_title_night_mode">夜间模式</string>
    <string name="settings_summary_night_mode">进行夜间模式的切换</string>
    <string name="settings_title_clear_cache">清除缓存</string>
    <string name="settings_title_log_out">退出</string>
    <string name="settings_summary_log_out">退出登录</string>
    <string name="settings_title_about">关于</string>
    <string name="settings_summary_about">Jetpack+MVVM练习项目</string>
    <string name="settings_title_version">版本</string>
    <string name="settings_title_open_source">开源组件</string>
    <string name="settings_summary_open_source">开源组件列表</string>
    <string name="settings_clear_cache_message">确定要清理缓存吗?</string>
    <string name="settings_clear_cache_success">清理缓存成功</string>
    <string name="settings_clear_cache_failed">清理缓存失败</string>
    <string name="settings_log_out_message">确定要退出吗?</string>
    <string name="settings_about_message">一个使用简单的,使用玩Android开放API接口、Jetpack+MVVM模式和各种开源库的练习项目</string>
    <string name="notification_channel_name_none">忽略</string>
    <string name="notification_channel_name_min">最小</string>
    <string name="notification_channel_name_low">低</string>
    <string name="notification_channel_name_default">默认</string>
    <string name="notification_channel_name_high">高</string>
    <string name="notification_channel_name_max">最高</string>
    <string name="notification_channel_desc_none">可忽略的通知</string>
    <string name="notification_channel_desc_min">最小的通知</string>
    <string name="notification_channel_desc_low">低通知</string>
    <string name="notification_channel_desc_default">普通的通知</string>
    <string name="notification_channel_desc_high">重要的通知</string>
    <string name="notification_channel_desc_max">最重要的通知</string>
    <string name="notify_collect_title_collect">刚刚收藏了</string>
    <string name="notify_collect_title_uncollect">刚刚取消收藏了</string>
    <string name="notify_collect_summary">收藏通知</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>