<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gw.mvvm.wan.viewModel.todo.TodoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.todo.TodoEditFragment">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/include_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/todo_edit_todo_title"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:hintTextColor="?attr/colorOnBackground">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/til_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:text="@={viewModel.todoInfo.title}"
                        tools:text="这里是标题" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/todo_edit_todo_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="140"
                    app:hintTextColor="?attr/colorOnBackground">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/transparent"
                        android:maxLength="140"
                        android:text="@={viewModel.todoInfo.content}"
                        tools:text="这里是内容" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/ll_priority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/todo_edit_todo_priority" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/iv_priority"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/shape_circle_black"
                            app:imageTint="@{viewModel.todoInfo.priorityColorRes}"
                            tools:tint="@color/red_500" />

                        <TextView
                            android:id="@+id/tv_priority"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@{viewModel.todoInfo.priorityString}"
                            app:textColorByRes="@{viewModel.todoInfo.priorityColorRes}"
                            tools:text="高" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/todo_edit_todo_date" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"

                        android:text="@{viewModel.todoInfo.dateStr}"
                        tools:text="2021-02-18" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/button_submit" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>